# ttrpg-planner

./: .flake8  .pre-commit-config.yaml  LICENSE  README.md  manage.py  pyproject.toml  setup.cfg
.devcontainer/: devcontainer.json  postCreateCommands.sh
.github/workflows/: PR Checks.yml
horae/: asgi.py  settings.py  urls.py  wsgi.py
norns/: settings.py
polls/: models.py  views.py
polls/migrations/: 0001_initial.py  0002_question_created_by.py
