[tool.poetry]
name = "norns"
version = "0.1.0"
description = ""
authors = ["Josh Odell <87207916+j01101111sh@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.7"
django-stubs = "^4.2.6"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
pylint = "^3.0.2"
pytest = "^7.4.3"
flake8 = "^6.1.0"
bandit = "^1.7.5"
pyupgrade = "^3.15.0"
isort = "^5.12.0"
black = "^23.11.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = 'black'

[tool.pylint.main]
disable = [
    "R0801", # similar lines in 2 files
    "C0114", # missing module docstring
    "C0115", # missing class docstring
    "C0116", # missing function docstring
    "W0611", # unused import
]

[tool.pylint.format]
max-line-length = "88"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "*.py"
python_functions = "test_*"

log_cli = true
log_cli_level = "WARNING"
log_cli_format = "%(asctime)s - %(levelname)s - %(name)s:%(lineno)d\n\t%(message)s"

log_file_level = "DEBUG"
log_file_format = "%(asctime)s - %(levelname)s - %(name)s:%(lineno)d\n\t%(message)s"

[tool.coverage.report]
omit = ["tests/*.py"]
show_missing = true
